# black_order_table

./: .env.deploy  .gitignore  Dockerfile  README.MD  docker-compose.yaml  entrypoint.sh  manage.py  nginx.conf  pyproject.toml
black_order_table/: asgi.py  settings.py  urls.py  wsgi.py
templates/: base.html
templates/registration/: login.html  logout.html  register.html
templates/web/: data_table.html
web/: admin.py  apps.py  models.py  urls.py  views.py
web/management/commands/: populate_data.py
web/migrations/: 0001_initial.py
