[tool.poetry]
name = "venv"
version = "0.1.0"
description = "Сервис для отображения таблицы товаров"
authors = ["т"]
license = "n"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11"
Django = "^4.2.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
