[tool.poetry]
name = "venv"
version = "0.1.0"
description = "Сервис для отображения таблицы товаров"
authors = ["alex_gnev"]
license = "n"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.6"
Django = "^4.2.6"
psycopg2 = "^2.9.9"
gunicorn = "^21.2.0"
psycopg2-binary = "^2.9.9"
django-bootstrap4 = "^23.2"
django-widget-tweaks = "^1.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
